--- a/src/telehealth/TeleHealthView.form
+++ b/src/telehealth/TeleHealthView.form
@@ -137,11 +137,22 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiAddInsurance">
               <Properties>
+                <Property name="font" type="java.awt.Font" resourceKey="jmiAddInsurance.font"/>
                 <Property name="text" type="java.lang.String" resourceKey="jmiAddInsurance.text"/>
                 <Property name="name" type="java.lang.String" value="jmiAddInsurance" noResource="true"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiAddInsuranceActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
+              <Properties>
+                <Property name="font" type="java.awt.Font" resourceKey="jMenuItem2.font"/>
+                <Property name="text" type="java.lang.String" resourceKey="jMenuItem2.text"/>
+                <Property name="name" type="java.lang.String" value="jMenuItem2" noResource="true"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
               </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jSeparator1">
